<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:stretchColumns="1"
        tools:context=".MainActivity">

        <!-- Header -->
        <TableRow>
            <TextView
                android:id="@+id/header_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="80dp"
                android:layout_marginTop="16dp"
                android:text="@string/poke_tracker"
                android:textSize="24sp"
                android:textStyle="bold" />
        </TableRow>

        <!-- Sub-header -->
        <TableRow>
            <TextView
                android:id="@+id/sub_header_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="80dp"
                android:layout_marginTop="15dp"
                android:text="@string/register_new_catch" />
        </TableRow>

        <!-- National ID -->
        <TableRow>

            <TextView
                android:id="@+id/national_id"
                android:layout_width="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:layout_weight="1"
                android:text="@string/national_number" />

            <EditText
                android:id="@+id/national_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:inputType="number"
                android:text="@string/_896_" />
        </TableRow>

        <!-- Name -->
        <TableRow>
            <TextView
                android:id="@+id/name_id"
                android:layout_width="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:layout_weight="1"
                android:text="@string/name" />

            <EditText
                android:id="@+id/name_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:inputType="text|textCapWords"
                android:text="@string/glastrier" />
        </TableRow>

        <!-- Species -->
        <TableRow>
            <TextView
                android:id="@+id/species_id"
                android:layout_width="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:layout_weight="1"
                android:text="@string/species" />

            <EditText
                android:id="@+id/species_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:inputType="text|textCapWords"
                android:text="@string/wild_horse_pok_mon" />
        </TableRow>

        <!-- Gender -->
        <TableRow android:layout_height="22dp">

            <TextView
                android:id="@+id/gender_id"
                android:layout_width="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="30dp"
                android:layout_weight="1"
                android:text="@string/gender" />

            <RadioGroup
                android:id="@+id/radio_group_id"
                android:layout_width="210dp"
                android:layout_height="50dp"
                android:layout_marginStart="0dp"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/female_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/female" />

                <RadioButton
                    android:id="@+id/male_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/male" />

                <RadioButton
                    android:id="@+id/unk_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/unk" />
            </RadioGroup>
        </TableRow>

        <!-- Height -->
        <TableRow>
            <TextView
                android:id="@+id/height_id"
                android:layout_width="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:layout_weight="1"
                android:text="@string/height" />

            <EditText
                android:id="@+id/height_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:inputType="numberDecimal"
                android:text="@string/_2_2_m" />
        </TableRow>

        <!-- Weight -->
        <TableRow>
            <TextView
                android:id="@+id/weight_id"
                android:layout_width="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:layout_weight="1"
                android:text="@string/weight" />

            <EditText
                android:id="@+id/weight_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:inputType="numberDecimal"
                android:text="@string/_800_0_kg" />
        </TableRow>

        <!-- Level -->
        <TableRow>
            <TextView
                android:id="@+id/level_id"
                android:layout_width="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:layout_weight="1"
                android:text="@string/level" />

            <Spinner
                android:id="@+id/spinner_id"
                android:layout_width="198dp"
                android:layout_height="28dp"
                android:layout_marginStart="0dp"
                android:layout_marginTop="16dp"
                android:contextClickable="true" />
        </TableRow>

        <!-- Stats Header -->
        <TableRow>
            <TextView
                android:id="@+id/stats_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:text="@string/base_stats"
                android:textSize="18sp"
                android:textStyle="bold" />
        </TableRow>

        <!-- HP -->
        <TableRow>
            <TextView
                android:id="@+id/hp_id"
                android:layout_width="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:layout_weight="1"
                android:text="@string/hp" />

            <EditText
                android:id="@+id/hp_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:inputType="number"
                android:text="@string/_0_0" />
        </TableRow>

        <!-- Attack -->
        <TableRow>
            <TextView
                android:id="@+id/attack_id"
                android:layout_width="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:layout_weight="1"
                android:text="@string/attack" />

            <EditText
                android:id="@+id/attack_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:inputType="number"
                android:text="@string/_0_2" />
        </TableRow>

        <!-- Defense -->
        <TableRow>
            <TextView
                android:id="@+id/defense_id"
                android:layout_width="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:layout_weight="1"
                android:text="@string/defense" />

            <EditText
                android:id="@+id/defense_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:inputType="number"
                android:text="@string/_0_3" />
        </TableRow>

        <!-- Save and Reset Buttons -->
        <TableRow>

            <Button
                android:id="@+id/save_id"
                android:layout_width="wrap_content"
                android:layout_marginStart="100dp"
                android:layout_marginTop="15dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:onClick="saveEvent"
                android:text="@string/save" />

            <Button
                android:id="@+id/reset_id"
                android:layout_width="wrap_content"
                android:layout_marginStart="-115dp"
                android:layout_marginTop="15dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:onClick="resetEvent"
                android:text="@string/reset" />
        </TableRow>
    </TableLayout>
</ScrollView>
