<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/header_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:text="@string/poke_tracker"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/sub_header_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:text="@string/register_new_catch" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="0dp">
        <TextView
            android:id="@+id/national_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:text="@string/national_number" />

            <EditText
                android:id="@+id/national_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="15dp"
                android:ems="10"
                android:inputType="number"
                android:text="@string/_896_" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/name_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginStart="10dp"
                android:text="@string/name" />

            <EditText
                android:id="@+id/name_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="115dp"
                android:layout_marginTop="15dp"
                android:ems="10"
                android:inputType="text|textCapWords"
                android:text="@string/glastrier" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">
        <TextView
            android:id="@+id/species_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginStart="10dp"
            android:text="@string/species" />
            <EditText
                android:id="@+id/species_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="100dp"
                android:layout_marginTop="15dp"
                android:ems="10"
                android:inputType="text|textCapWords"
                android:text="@string/wild_horse_pok_mon" />
        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/gender_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="25dp"
            android:text="@string/gender" />

        <RadioGroup
            android:id="@+id/radio_group_id"
            android:layout_width="208dp"
            android:layout_height="59dp"
            android:layout_below="@id/species_input"
            android:layout_marginStart="105dp"
            android:layout_marginTop="0dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/female_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:text="@string/female" />

            <RadioButton
                android:id="@+id/male_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:text="@string/male" />

            <RadioButton
                android:id="@+id/unk_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:text="@string/unk" />
        </RadioGroup>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/height_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginStart="10dp"
            android:text="@string/height" />
        <EditText
            android:id="@+id/height_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="115dp"
            android:layout_marginTop="15dp"
            android:ems="10"
            android:inputType="numberDecimal"
            android:text="@string/_2_2_m" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/weight_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginStart="10dp"
            android:text="@string/weight" />
        <EditText
            android:id="@+id/weight_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="110dp"
            android:layout_marginTop="15dp"
            android:ems="10"
            android:inputType="numberDecimal"
            android:text="@string/_800_0_kg" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/level_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginStart="10dp"
            android:text="@string/level" />
        <Spinner
            android:id="@+id/spinner_id"
            android:layout_width="198dp"
            android:layout_height="28dp"
            android:layout_marginStart="120dp"
            android:layout_marginTop="15dp"
            android:contextClickable="true" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/stats_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="52dp"
            android:layout_marginTop="36dp"
            android:text="@string/base_stats"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/hp_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginStart="10dp"
            android:text="@string/hp" />
        <EditText
            android:id="@+id/hp_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="135dp"
            android:layout_marginTop="15dp"
            android:ems="10"
            android:inputType="number"
            android:text="@string/_0_0" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/attack_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginStart="10dp"
            android:text="@string/attack" />
        <EditText
            android:id="@+id/attack_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="113dp"
            android:layout_marginTop="15dp"
            android:ems="10"
            android:inputType="number"
            android:text="@string/_0_2" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/defense_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginStart="10dp"
            android:text="@string/defense" />
        <EditText
            android:id="@+id/defense_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="103dp"
            android:layout_marginTop="15dp"
            android:ems="10"
            android:inputType="number"
            android:text="@string/_0_3" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">
        <Button
            android:id="@+id/save_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="180dp"
            android:layout_marginTop="15dp"
            android:onClick="saveEvent"
            android:text="@string/save" />

        <Button
            android:id="@+id/reset_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:onClick="resetEvent"
            android:text="@string/reset" />
    </LinearLayout>

    </LinearLayout>
</ScrollView>